# rondb

./: .gitignore  .mailmap  CMakeLists.txt  Dockerfile  Dockerfile.oraclelinux7  Dockerfile.oraclelinux8  Dockerfile.oraclelinux9  Dockerfile.ubuntu22  LICENSE  MYSQL_VERSION  README  README.md  config.h.cmake  configure.cmake  go.work  go.work.sum  run-clusterj-unit-test
sql/: item.cc  (+25 more)
storage/ndb/rest-server/data-access-rondb/: CMakeLists.txt  LICENSE  README.md  enable-core-dump  lint
storage/ndb/rest-server/data-access-rondb/src/: error-strings.h  error-strs.h  logger.cpp  logger.hpp  mystring.cpp  mystring.hpp  ndb_api_helper.cpp  ndb_api_helper.hpp  ndb_object_pool.cpp  ndb_object_pool.hpp  rdrs-const.h  rdrs-dal.cpp  rdrs-dal.h  rdrs-hopsworks-dal.cpp  rdrs-hopsworks-dal.h  rdrs_rondb_connection.cpp  rdrs_rondb_connection.hpp  rdrs_rondb_connection_pool.cpp  rdrs_rondb_connection_pool.hpp  retry_handler.cpp  retry_handler.hpp  status.hpp
storage/ndb/rest-server/data-access-rondb/src/db-operations/pk/: common.cpp  common.hpp  pkr-operation.cpp  pkr-operation.hpp  pkr-request.cpp  pkr-request.hpp  pkr-response.cpp  pkr-response.hpp
storage/ndb/rest-server/data-access-rondb/src/feature_store/: feature_store.cpp  feature_store.h
storage/ndb/rest-server/data-access-rondb/src/rondb-lib/: decimal_utils.hpp  rdrs_date.hpp  rdrs_string.hpp
storage/ndb/rest-server/rest-api-server/: CMakeLists.txt  Makefile  README.md  README_feature_store.md  go.mod  go.sum
storage/ndb/rest-server/rest-api-server/api/: api.yml  rdrs.proto
storage/ndb/rest-server/rest-api-server/cmd/server/: main.go
storage/ndb/rest-server/rest-api-server/config/: config_template.json
storage/ndb/rest-server/rest-api-server/internal/common/: cerrors.go  cli_arguments.go  encoding-helper.go  grpc_http_errors.go  response.go  schemata.go  test_context.go
storage/ndb/rest-server/rest-api-server/internal/config/: config.go  config_template.json  constants.go  getters_setters.go  helpers.go  init_defaults.go  structs.go
storage/ndb/rest-server/rest-api-server/internal/dal/: README.md  api_hopsworks.go  connection.go  error.go  heap.go  heap_test.go  operations.go  operations_feature_store.go  operations_hopsworks.go  rdrs-dal.go  rdrs-hopsworks-dal.go
storage/ndb/rest-server/rest-api-server/internal/dal/heap/: heap.go  heap_test.go
storage/ndb/rest-server/rest-api-server/internal/feature_store/: featurestoreerrocode.go  metadata.go
storage/ndb/rest-server/rest-api-server/internal/handlers/: handler.go
storage/ndb/rest-server/rest-api-server/internal/integrationtests/: README.md  benchmark_util.go  initialiase_tests.go  mysql_comparison.go  utils.go
storage/ndb/rest-server/rest-api-server/internal/log/: cfuncs.go  log.go  logc.go
storage/ndb/rest-server/rest-api-server/internal/metrics/: grpc_connection_watcher.go  http_connection_watcher.go  metrics.go
storage/ndb/rest-server/rest-api-server/internal/server/: server.go
storage/ndb/rest-server/rest-api-server/internal/servers/: ping_test.go  servers.go
storage/ndb/rest-server/rest-api-server/internal/testutils/: clients.go  context.go  grpc_client.go  misc.go  schemata.go  tls_create.go  tlscontext.go  url_generator.go
storage/ndb/rest-server/rest-api-server/pkg/api/: api_easyjson.go  batch-data-structs.go  convert.go  feature_store_data_structs.go  pk-data-structs.go  rdrs.pb.go  rdrs_grpc.pb.go  stat-data-structs.go
storage/ndb/rest-server/rest-api-server/resources/config/: config_dockertest.json  config_for_docker_image.json  config_localhost.json  config_mtr.json
storage/ndb/rest-server/rest-api-server/resources/testdbs/: embeddings.go  init.go
storage/ndb/rest-server/rest-api-server/version/: version.go
storage/ndb/rest-server2/extra/drogon/: CMakeLists.txt
storage/ndb/rest-server2/extra/drogon/drogon-1.8.4/: CMakeLists.txt  Makefile  trantor
storage/ndb/rest-server2/extra/drogon/drogon-1.8.7/: CMakeLists.txt  trantor
storage/ndb/rest-server2/extra/drogon/drogon-1.9.7/: CMakeLists.txt  trantor
storage/ndb/rest-server2/extra/simdjson/: CMakeLists.txt
storage/ndb/rest-server2/server/: .clang-format  CMakeLists.txt  config_structs.cpp  config_structs.hpp  connection.cpp  connection.hpp  data-structs.h  encoding-helper.hpp  encoding.cpp  encoding.hpp  encoding_helper.cpp  encoding_helper.hpp  error.hpp  json_parser.cpp  json_parser.hpp  log.cpp  log.hpp  main.cc  pk-data-structs.hpp  pk_data_structs.cpp  pk_data_structs.hpp  pk_read_ctrl.cpp  pk_read_ctrl.hpp
storage/ndb/rest-server2/server/src/: CMakeLists.txt  api_key.cpp  api_key.hpp  base_ctrl.cpp  base_ctrl.hpp  batch_feature_store_ctrl.cpp  batch_feature_store_ctrl.hpp  batch_pk_read_ctrl.cpp  batch_pk_read_ctrl.hpp  buffer_manager.cpp  buffer_manager.hpp  cache.hpp  config_structs.cpp  config_structs.hpp  config_structs_def.hpp  connection.cpp  connection.hpp  constants.hpp  encoding.cpp  encoding.hpp  encoding_helper.cpp  encoding_helper.hpp  error_strings.h  feature_store_ctrl.cpp  feature_store_ctrl.hpp  feature_store_data_structs.cpp  feature_store_data_structs.hpp  feature_store_error_code.hpp  feature_util.cpp  feature_util.hpp  fs_cache.cpp  fs_cache.hpp  health_ctrl.cpp  health_ctrl.hpp  json_parser.cpp  json_parser.hpp  json_printer.cpp  json_printer.hpp  log.cpp  log.hpp  (+41 more)
storage/ndb/rest-server2/server/src/feature_store/: feature_store.cpp  feature_store.h
storage/ndb/rest-server2/server/test/: CMakeLists.txt  api_key_test.cpp  feature_store_test.cpp
storage/ndb/rest-server2/server/test/resources/: embedded_content.hpp.in  embeddings.hpp
storage/ndb/rest-server2/server/test_go/: Makefile  bench.sh  script.sh
storage/ndb/src/ronsql/: AggregationAPICompiler.cpp  AggregationAPICompiler.hpp  ArenaAllocator.cpp  ArenaAllocator.hpp  CMakeLists.txt  DynamicArray.hpp  Keywords.hpp  KeywordsUnitTest.cpp  LexString.cpp  LexString.hpp  OverflowUnitTest.cpp  ResultPrinter.cpp  ResultPrinter.hpp  RonSQLCommon.hpp  RonSQLLexer.l  RonSQLParser.y  RonSQLPreparer.cpp  RonSQLPreparer.hpp  build_lexer.sh  build_parser.sh  define_formatter.hpp  ronsql_cli.cpp
(+1544 files in other folders)
